<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Mercado</string>
    <string name="copyright">Lista Compras - Todos os direitos reservados</string>
    <string name="titulo">Lista Compras</string>
    
    <!-- Mensagens -->
    <string name="nome">Nome</string>
    <string name="descricao">Descrição do produto</string>
    <string name="btMenuAdicionar">Adicionar</string>
    <string name="btMenuRemoverTodos">Limpar Lista</string>
    <string name="valor">valor</string>
    <string name="btSair">Sair</string>
    
    <string name="bt_add">adicionar produto</string>
    <style name="buttonText">
        <item name="android:layout_width">fill_parent</item>  
	   <item name="android:layout_height">wrap_content</item>  
	   <item name="android:textColor">#ffffff</item>  
	   <item name="android:gravity">center</item>  
	   <item name="android:textSize">17sp</item>  
	   <item name="android:textStyle">bold</item>  
	   <item name="android:shadowColor">#000000</item>  
	   <item name="android:shadowDx">1</item>  
	   <item name="android:shadowDy">1</item>  
	   <item name="android:shadowRadius">2</item>
    </style>
    
</resources>
