<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutHeader"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="130dp"
    android:background="@drawable/shape_header">
    
    <TextView 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:padding="10dp"
    	android:text="@string/app_name"
    	android:gravity="center"
    	style="@style/texto12"
    	android:textColor="@color/branco"/>
    
    <EditText
    	android:id="@+id/editAddProduto"
    	android:hint="@string/descricao"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:lines="1"/>
    
    <TableLayout
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:stretchColumns="1">
    
     	<TableRow>
     	    <Button 
		    	android:id="@+id/btAddProduto"
		    	style="@style/buttonText"
		    	android:background="@drawable/bt_verde"
		    	android:text="@string/bt_add"/>
     	    
     		<Button 
		    	android:id="@+id/btNovaLista"
		    	style="@style/buttonText"
		    	android:background="@drawable/bt_azul"
		    	android:text="@string/btMenuRemoverTodos"/>
     		
     		<Button 
		    	android:id="@+id/btSair"
		    	style="@style/buttonText"
		    	android:background="@drawable/bt_vermelho"
		    	android:text="@string/btSair"/> 
    
		    
    	</TableRow>    
    </TableLayout>       	
</LinearLayout>
    	